# winget-rs

./: Cargo.toml  gen.md
bindgen/: Cargo.toml  Microsoft.Management.Deployment.winmd
bindgen/src/: main.rs
bingen/: Cargo.toml
bingen/src/: main.rs
docmerge/: Cargo.toml
docmerge/src/: main.rs
src/: bindings.rs  lib.rs
