[package]
name = "winget-rs"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = ["bingen", "docmerge"]

[dependencies]
windows = {
  version = "0.62",
  features = [
    "Foundation",
    "Foundation_Collections",
    "Security_Cryptography_Certificates",
    "System",
    "Win32_Foundation",
    "Win32_System_WinRT",
  ]
}
windows-collections = "0.3"
windows-core = "0.62"
windows-future = "0.3"
windows-result = "0.4"
windows-strings = "0.5"
