[package]
name = "winget-rs"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = ["bindgen", "docmerge"]

[dependencies]
windows = {
  version = "0.62",
  features = [
    "Foundation",
    "Security_Cryptography_Certificates",
    "System",
  ]
}
windows-collections = "0.3"
windows-core = "0.62"
windows-future = "0.3"
